crates/lang-parse/tests/snapshots/parser__parser_body expr method.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x976676fbfcf1e3cc",
        output_hash: "0xe3a3f1030f6c73bc",
        tree: (
            span: (
                start: 0,
                end: 9,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 9,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (Expression((
                        span: (
                            start: 0,
                            end: 8,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: ElementAccess((
                            span: (
                                start: 0,
                                end: 8,
                            ),
                            expr: Body((
                                span: (
                                    start: 0,
                                    end: 2,
                                ),
                                statements: (
                                    span: (
                                        start: 1,
                                        end: 1,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    statements: [],
                                    tail: None,
                                ),
                            )),
                            element_chain: [
                                (
                                    span: (
                                        start: 2,
                                        end: 8,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    inner: Method((
                                        span: (
                                            start: 3,
                                            end: 8,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        path: (
                                            span: (
                                                start: 3,
                                                end: 6,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            prefix: None,
                                            parts: [
                                                (
                                                    span: (
                                                        start: 3,
                                                        end: 6,
                                                    ),
                                                    name: "foo",
                                                ),
                                            ],
                                        ),
                                        arguments: (
                                            span: (
                                                start: 7,
                                                end: 7,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            arguments: [],
                                        ),
                                    )),
                                ),
                            ],
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
