crates/lang-parse/tests/snapshots/parser__parser_call empty args comment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xc50d964dd48ea1ec",
        output_hash: "0x75159817772a4575",
        tree: (
            span: (
                start: 0,
                end: 17,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 17,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 17,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Call((
                        span: (
                            start: 0,
                            end: 17,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        path: (
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            prefix: None,
                            parts: [
                                (
                                    span: (
                                        start: 0,
                                        end: 3,
                                    ),
                                    name: "foo",
                                ),
                            ],
                        ),
                        arguments: (
                            span: (
                                start: 4,
                                end: 16,
                            ),
                            extras: (
                                leading: ([
                                    Comment((
                                        span: (
                                            start: 4,
                                            end: 16,
                                        ),
                                        inner: MultiLine("foobar"),
                                    )),
                                ]),
                                trailing: ([]),
                            ),
                            arguments: [],
                        ),
                    )),
                )),
            ),
        ),
    ),
)
---
