crates/lang-parse/tests/snapshots/parser__parser_call named args.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 9298600534104599098,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 17,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 17,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 17,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: Call((
                            span: (
                                start: 0,
                                end: 17,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            name: (
                                span: (
                                    start: 0,
                                    end: 3,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                parts: [
                                    (
                                        span: (
                                            start: 0,
                                            end: 3,
                                        ),
                                        name: "foo",
                                    ),
                                ],
                            ),
                            arguments: (
                                span: (
                                    start: 4,
                                    end: 16,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                arguments: [
                                    Named((
                                        span: (
                                            start: 4,
                                            end: 9,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        id: (
                                            span: (
                                                start: 4,
                                                end: 5,
                                            ),
                                            name: "a",
                                        ),
                                        expr: Literal((
                                            span: (
                                                start: 8,
                                                end: 9,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            literal: Integer((
                                                span: (
                                                    start: 8,
                                                    end: 9,
                                                ),
                                                value: 1,
                                                raw: "1",
                                            )),
                                        )),
                                    )),
                                    Named((
                                        span: (
                                            start: 11,
                                            end: 16,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        id: (
                                            span: (
                                                start: 11,
                                                end: 12,
                                            ),
                                            name: "b",
                                        ),
                                        expr: Literal((
                                            span: (
                                                start: 15,
                                                end: 16,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            literal: Integer((
                                                span: (
                                                    start: 15,
                                                    end: 16,
                                                ),
                                                value: 2,
                                                raw: "2",
                                            )),
                                        )),
                                    )),
                                ],
                            ),
                        )),
                    )),
                ),
            ),
            hash: 9363262503124883561,
        ),
    ),
)
---
