crates/lang-parse/tests/snapshots/parser__parser_call partially named args.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x8dc49d6b9cef4654",
        output_hash: "0x893828d07af05c6d",
        tree: (
            span: (
                start: 0,
                end: 16,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 16,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 16,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Call((
                        span: (
                            start: 0,
                            end: 16,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        path: (
                            span: (
                                start: 0,
                                end: 3,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            prefix: None,
                            parts: [
                                (
                                    span: (
                                        start: 0,
                                        end: 3,
                                    ),
                                    name: "foo",
                                ),
                            ],
                        ),
                        arguments: (
                            span: (
                                start: 4,
                                end: 15,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            arguments: [
                                Unnamed((
                                    span: (
                                        start: 4,
                                        end: 5,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: SymbolPath((
                                        span: (
                                            start: 4,
                                            end: 5,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        prefix: None,
                                        parts: [
                                            (
                                                span: (
                                                    start: 4,
                                                    end: 5,
                                                ),
                                                name: "a",
                                            ),
                                        ],
                                    )),
                                )),
                                Named((
                                    span: (
                                        start: 7,
                                        end: 12,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    id: (
                                        span: (
                                            start: 7,
                                            end: 8,
                                        ),
                                        name: "b",
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 11,
                                            end: 12,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 11,
                                                end: 12,
                                            ),
                                            value: "2",
                                        )),
                                    )),
                                )),
                                Unnamed((
                                    span: (
                                        start: 14,
                                        end: 15,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    expr: Literal((
                                        span: (
                                            start: 14,
                                            end: 15,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 14,
                                                end: 15,
                                            ),
                                            value: "3",
                                        )),
                                    )),
                                )),
                            ],
                        ),
                    )),
                )),
            ),
        ),
    ),
)
---
